@startuml RID Structure
!theme plain
skinparam backgroundColor white
skinparam classBackgroundColor white
skinparam classBorderColor black
skinparam arrowColor black

title Resource Interpretation Definition (RID) Architecture

package "RID Core Structure" {
  class ResourceInterpretationDefinition {
    +apiVersion: string
    +kind: string
    +metadata: ObjectMeta
    +spec: ResourceInterpretationDefinitionSpec
  }
  
  class ResourceInterpretationDefinitionSpec {
    +structureDefinition: StructureDefinition
    +instructions: OptimizationInstructions
  }
  
  class StructureDefinition {
    +rootComponent: ComponentDefinition
    +childComponents: ComponentDefinition[]
    +referencedComponents: ComponentDefinition[]
    +additionalChildKinds: GroupVersionKind[]
  }
  
  class GroupVersionKind {
    +group: string
    +version: string
    +kind: string
  }
}

package "Component Architecture" {
  class ComponentDefinition {
    +name: string
    +kind: GroupVersionKind
    +ownerName: string?
    +metadataPath: string?
    +specDefinition: SpecDefinition?
    +scaleDefinition: ScaleDefinition?
    +statusDefinition: StatusDefinition?
    +podSelector: PodSelector?
    +references: ReferenceDefinition[]
  }
  
  class ReferenceDefinition {
    +componentName: string
    +componentKeyPath: string
    +namespace: string?
  }
  
  class ScaleDefinition {
    +replicasPath: string?
    +minReplicasPath: string?
    +maxReplicasPath: string?
  }
  
  class StatusDefinition {
    +phaseDefinition: PhaseDefinition?
    +conditionsDefinition: ConditionsDefinition?
    +statusMappings: StatusMappings
  }
  
  class PhaseDefinition {
    +path: string
  }
  
  class ConditionsDefinition {
    +path: string
    +typeFieldName: string
    +statusFieldName: string
    +messageFieldName: string
  }
  
  class StatusMappings {
    +initializing: StatusMatcher[]?
    +running: StatusMatcher[]?
    +completed: StatusMatcher[]?
    +failed: StatusMatcher[]?
  }
  
  class StatusMatcher {
    +byPhase: string?
    +byConditions: ExpectedCondition[]?
  }
  
  class ExpectedCondition {
    +type: string
    +status: string
  }
  
  class PodSelector {
    +keyPath: string
    +value: string?
  }
  
  class SpecDefinition {
    +podTemplateSpecPath: string?
    +podSpecPath: string?
    +fragmentedPodDefinition: FragmentedPodDefinition?
  }
  
  class FragmentedPodDefinition {
    +labelsPath: string?
    +annotationsPath: string?
    +resourcesPath: string?
    +resourceClaimsPath: string?
    +schedulerNamePath: string?
    +nodeAffinityPath: string?
    +podAffinityPath: string?
    +containersPath: string?
    +priorityClassNamePath: string?
    +imagePath: string?
  }
}

package "Optimization Instructions" {
  class OptimizationInstructions {
    +gangScheduling: GangScheduling?
    +gpuInterconnect: GPUInterconnect?
    +topologyAwareness: TopologyAwareness?
  }
  
  class GangScheduling {
    +podGroups: PodGroupDefinition[]
  }
  
  class GPUInterconnect {
    +acceleratedComponents: GeneralSelector[]
  }
  
  class TopologyAwareness {
    +topologyGroups: TopologyGroupDefinition[]
  }
  
  class PodGroupDefinition {
    +name: string
    +members: GroupingSelector[]
    +dependsOn: string[]?
  }
  
  class ComponentSelectorBase {
    +componentName: string
    +filters: string[]?
  }
  
  class GroupingSelector {
    +groupByKeyPaths: string[]?
  }
  
  class GeneralSelector {
    +componentKeyPath: string?
  }
  
  class TopologyGroupDefinition {
    +topologyName: string?
    +preferredPlacement: string?
    +requiredPlacement: string?
    +members: GeneralSelector[]
  }
}

package "Framework Examples" {
  class PyTorchJobRID {
    <<example>>
    +kind: PyTorchJob
    +components: [pytorchjob, master, worker]
    +instructions: [gangScheduling, gpuInterconnect]
  }
  
  class NIMServiceRID {
    <<example>>
    +kind: NIMService
    +components: [nimservice, nimcache-ref]
    +dependencies: nimservice → nimcache-ref
    +instructions: [gpuInterconnect]
  }
  
  class KnativeServiceRID {
    <<example>>
    +kind: Service
    +components: [service, revision]
    +childKinds: [Deployment]
    +instructions: [topologyAwareness]
  }
}

' Core Relationships
ResourceInterpretationDefinition ||--|| ResourceInterpretationDefinitionSpec
ResourceInterpretationDefinitionSpec ||--|| StructureDefinition
ResourceInterpretationDefinitionSpec ||--|| OptimizationInstructions
StructureDefinition ||--|| ComponentDefinition : "rootComponent"
StructureDefinition ||--o{ ComponentDefinition : "childComponents"
StructureDefinition ||--o{ ComponentDefinition : "referencedComponents"
StructureDefinition ||--o{ GroupVersionKind : "additionalChildKinds"

' Component Relationships
ComponentDefinition ||--|| GroupVersionKind : "defines"
ComponentDefinition ||--o{ ReferenceDefinition : "references"
ComponentDefinition ||--o| ScaleDefinition
ComponentDefinition ||--o| StatusDefinition
StatusDefinition ||--o| PhaseDefinition
StatusDefinition ||--o| ConditionsDefinition
StatusDefinition ||--|| StatusMappings
StatusMappings ||--o{ StatusMatcher
StatusMatcher ||--o{ ExpectedCondition

' Instruction Relationships
OptimizationInstructions ||--o| GangScheduling
OptimizationInstructions ||--o| GPUInterconnect
OptimizationInstructions ||--o| TopologyAwareness

GangScheduling ||--o{ PodGroupDefinition
GPUInterconnect ||--o{ GeneralSelector
TopologyAwareness ||--o{ TopologyGroupDefinition
TopologyGroupDefinition ||--o{ GeneralSelector
PodGroupDefinition ||--o{ GroupingSelector

' Selector inheritance
GroupingSelector --|> ComponentSelectorBase
GeneralSelector --|> ComponentSelectorBase

' Component Definition Relationships
ComponentDefinition ||--o| SpecDefinition
ComponentDefinition ||--o| PodSelector
SpecDefinition ||--o| FragmentedPodDefinition

' Example Relationships
PyTorchJobRID ..|> ResourceInterpretationDefinition : "implements"
NIMServiceRID ..|> ResourceInterpretationDefinition : "implements"
KnativeServiceRID ..|> ResourceInterpretationDefinition : "implements"

note top of ResourceInterpretationDefinition
  **Resource Interpretation Definition**
  
  Teaches Kai-bolt how to:
  • Understand workload structure
  • Monitor workload health  
  • Optimize workload execution
end note

note top of ComponentDefinition
  **Component Types:**
  • Root: Main CRD (no ownerName)
  • Child: Components with ownerName & specDefinition
  • Referenced: External dependencies
  
  **Pod Identification:**
  • podSelector: Identifies component type from pod labels
  • Required for multi-component RIDs
end note

note top of OptimizationInstructions
  **Instruction Philosophy:**
  • Present = Required
  • Absent = Disabled
end note

note bottom of ReferenceDefinition
  **Reference Pattern:**
  • Referencing component owns relationship
  • componentKeyPath evaluated against referencing resource
end note

@enduml 